# oidc-endpoint

./: .gitignore  Cargo.toml  Dockerfile  README.md  prometheus.yml
.github/workflows/: ci.yml  publish.yml  test.yml
src/: main.rs
src/api/: one.rs  two.rs
src/auth/: config.rs  endpoints.rs  flow.rs  handler.rs  mod.rs  route.rs  session_service.rs  session_store.rs
src/logger/: metrics_builder.rs  mod.rs
src/util/: jwt.rs
