[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
prometheus = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
utoipa = {version = "5.2.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "8.1.0", features = ["axum", "vendored"], default-features = false }
