[package]
name = "api-gateway"
version = "0.2.0"
edition = "2021"
authors = ["calmhlynn <barca105@naver.com>"]
license = "MIT"

[dependencies]
axum  = "0.8.1"
axum-extra = { version = "0.12.0", features = ["typed-header", "cookie-private"] }
chrono = "0.4.39"
jsonwebtoken = "10.2.0"
lazy_static = "1.5.0"
metrics = { version = "0.24.1", default-features = false }
metrics-exporter-prometheus = { version = "0.17.0", default-features = false }
oauth2 = "5.0.0"
once_cell = "1.20.2"
prometheus = { version = "0.14", default-features = false }
rand = "0.9.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json ="1.0.135"
tokio = { version = "1.45", features = ["full"] }
utoipa = {version = "5.3.1", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "9.0.0", features = ["axum", "vendored"], default-features = false }
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = {version = "0.32", features = ["tokio-comp"]}
deadpool-redis = "0.22.0"
time = "0.3.37"
